# ShroomBox

./: .gitignore  README.md  fruitbox_ai_watch.py  fruitbox_colors.py  fruitbox_config.py  fruitbox_game.py  fruitbox_menu.py  fruitbox_pygame.py  fruitbox_settings.py  fruitbox_stats.py  fruitbox_vs.py  pyproject.toml  requirements-plot.txt  requirements.txt
.github/scripts/: check_exe_size.py  download_hf_onnx.py  verify_torch_cpu.py
.github/workflows/: build-windows.yml  deploy-web.yml
src/fruitbox/: ai_watch.py  env.py  menu.py  onnx_agent.py  plot_training.py  pygame_ui.py  settings.json  stats_screen.py  train.py  vs.py  watch.py  watch_callback.py
src/fruitbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fruitbox_core/: grid.py  stats.py
src/fruitbox_pygame/: help.py  pygame_ui.py  settings.py
src/fruitbox_pygame/assets/: theme_dark.json
src/fruitbox_web/: __main__.py  index.html  menu.py  play.py  vs.py  watch.py
tools/: build_web.py  export_onnx.py
web/: app.js  coi-serviceworker.js  index.html  style.css
