[project]
name = "fruitbox"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
cpu = ["torch"]
cu128 = ["torch"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
fruitbox-app-onnx  = { workspace = true }
fruitbox-app-torch = { workspace = true }
fruitbox-core      = { workspace = true }
fruitbox-pygame    = { workspace = true }
fruitbox-train     = { workspace = true }
fruitbox-web       = { workspace = true }
torch = { index = "pytorch-cpu" }

[dependency-groups]
build = ["huggingface_hub", "pyinstaller"]
plot  = ["matplotlib", "pandas", "tensorboard"]
web   = ["onnxruntime", "onnxscript", "pygbag"]

[tool.uv]
conflicts = [
    [{ extra = "cpu" }, { extra = "cu128" }],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url  = "https://download.pytorch.org/whl/cpu"
explicit = true
